--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,16 +6,12 @@
         <div class="container-fluid d-flex flex-column p-0">
           <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page"
             class="p-4 navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0">
-                 <div class="p-3 sidebar-brand-text mt-2 mb-2 pt-5">
-              <img src="../assets/img/g20687.png" width="30%" height="30%"/>
-              <span class="flex-grow-1 flex-shrink-1 flex-fill flex-wrap mx-3">
-                <br>Sewing Project
-                <br>Manager
-          </span>
+           <div class="flex-grow-1 flex-shrink-1 flex-fill flex-wrap mx-3 p-3  mt-5 mb-2 pt-5" >
+              <img src="../assets/img/g20687.png" width="75%" height="50%"/>
             </div>
           </a>
           <hr class="sidebar-divider my-3" />
-          <ul class="pt-2 navbar-nav text-light" id="accordionSidebar" style="color: rgb(255, 255, 255); font-weight: bold">
+          <ul class="pt-4 navbar-nav text-light" id="accordionSidebar" style="color: rgb(255, 255, 255); font-weight: bold">
             <li class="nav-item">
               <a routerLink="/dashboard" routerLinkActive="active" ariaCurrentWhenActive="page"
               class="nav-link">
