--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,14 @@
-<div class="container">
-  <main role="main" class="dash main content bd-content pt-3 mt-3 text-black">
-      <section class="container">
+<div class="container-flex">
+  <main role="main" class=" content bd-content pt-3 mt-3 text-black">
+      <section class="container-flex">
           <div class="flex-column">
               <div class="row">
                 <h2>It's around here... somewhere!</h2>
                   <div class="justify-content-between flex-wrap  align-items-top pb-2 mb-3 border-bottom">
-                      <p class="lead">This is a project and supplies tracker for sewing projects but it can be used
-                          for
-                          knitting,
-                          crochet, woodworking, car parts, Warhammer minis, or just about any other hobby that has
-                          smaller
-                          projects and supplies for each one.</p>
-                          <p class="lead"> This can also track what items need to be purchased or what is
-                          already "in stock" to avoid over buying which is a bad habit of those with hobbies!
+<!-- <p><b>                    TODO make this grow & shrink for tablets </b></p> -->
+                      <p >This is a project and supplies tracker for sewing projects but it can be used for knitting,  crochet, woodworking, car parts, Warhammer minis, or just about any other hobby that has smaller projects and supplies for each one.</p>
+                      <p> This can also track what items need to be purchased or what is
+                      already "in stock" to avoid over buying which is a bad habit of those with hobbies!
                       </p>
                   </div>
               </div>
