--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -8,6 +8,12 @@
         List of {{ title }}  &amp; Status
       </p>
     </div>
+    <!-- TODO add new item button link to the form -->
+<div class="btn btn-primary col-2 py-2">
+  <button type="button" class="btn" routerLink="/projectform" routerLinkActive="active" ariaCurrentWhenActive="page"
+  class="nav-link"> New Project
+  </button>
+  </div>
     <div class="card-body">
       <div class="row">
         <div class="col-md-6 text-nowrap">
