--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -10,6 +10,14 @@
       </p>
       <!-- TODO when items are checked off the list as purchased add them to the stash list-->
     </div>
+
+    <!-- TODO add new item button link to the form -->
+<div class="btn btn-primary col-3 py-2">
+  <button type="button" class="btn" routerLink="/shoppinglist" routerLinkActive="active" ariaCurrentWhenActive="page"
+  class="nav-link"> Add to Shopping List
+  </button>
+  </div>
+
     <div class="card-body">
       <div class="row">
         <div class="col-md-6 text-nowrap">
@@ -62,161 +70,9 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>
-                <img
-                  class="img-thumbnail border rounded-0 border-4 border-primary shadow-sm d-flex me-2"
-                  width="50"
-                  height="50"
-                  src="/assets/img/avatars/avatar1.jpeg?h=0ecc82101fb9a10ca459432faa8c0656"
-                  loading="lazy"
-                />To Project Link
-              </td>
-              <td>5 words only go here</td>
-              <td>First location</td>
-              <td>first category</td>
-              <td>one status</td>
-              <td><input type="checkbox" /></td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar2.jpeg?h=5d142be9441885f0935b84cf739d4112"
-                />Angelica Ramos
-              </td>
-              <td>Chief Executive Officer(CEO)</td>
-              <td>London</td>
-              <td>47</td>
-              <td>2009/10/09<br /></td>
-              <td>$1,200,000</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar3.jpeg?h=c5166867f10a4e454b5b2ae8d63268b3"
-                />Ashton Cox
-              </td>
-              <td>Junior Technical Author</td>
-              <td>San Francisco</td>
-              <td>66</td>
-              <td>2009/01/12<br /></td>
-              <td>$86,000</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar4.jpeg?h=fefb30b61c8459a66bd338b7d790c3d5"
-                />Bradley Greer
-              </td>
-              <td>Software Engineer</td>
-              <td>London</td>
-              <td>41</td>
-              <td>2012/10/13<br /></td>
-              <td>$132,000</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar5.jpeg?h=35dc45edbcda6b3fc752dab2b0f082ea"
-                />Brenden Wagner
-              </td>
-              <td>Software Engineer</td>
-              <td>San Francisco</td>
-              <td>28</td>
-              <td>2011/06/07<br /></td>
-              <td>$206,850</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar1.jpeg?h=0ecc82101fb9a10ca459432faa8c0656"
-                />Brielle Williamson
-              </td>
-              <td>Integration Specialist</td>
-              <td>New York</td>
-              <td>61</td>
-              <td>2012/12/02<br /></td>
-              <td>$372,000</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar2.jpeg?h=5d142be9441885f0935b84cf739d4112"
-                />Bruno Nash<br />
-              </td>
-              <td>Software Engineer</td>
-              <td>London</td>
-              <td>38</td>
-              <td>2011/05/03<br /></td>
-              <td>$163,500</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar3.jpeg?h=c5166867f10a4e454b5b2ae8d63268b3"
-                />Caesar Vance
-              </td>
-              <td>Pre-Sales Support</td>
-              <td>New York</td>
-              <td>21</td>
-              <td>2011/12/12<br /></td>
-              <td>$106,450</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar4.jpeg?h=fefb30b61c8459a66bd338b7d790c3d5"
-                />Cara Stevens
-              </td>
-              <td>Sales Assistant</td>
-              <td>New York</td>
-              <td>46</td>
-              <td>2011/12/06<br /></td>
-              <td>$145,600</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar5.jpeg?h=35dc45edbcda6b3fc752dab2b0f082ea"
-                />Cedric Kelly
-              </td>
-              <td>Senior JavaScript Developer</td>
-              <td>Edinburgh</td>
-              <td>22</td>
-              <td>2012/03/29<br /></td>
-              <td>$433,060</td>
-            </tr>
+
           </tbody>
-          <tfoot>
-            <tr></tr>
-          </tfoot>
+
         </table>
       </div>
       <div class="row">
