--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,15 @@
 /* imported from other style sheets */
 @import url("./assets/bootstrap/css/bootstrap.min.css");
 @import url("./assets/css/styles.min.css");
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 
 h1, h2, h3, h4, h5 {
 color: black;
+font-family: 'Dancing Script', cursive;
 };
 
-
+.spm {
+  font-family: 'Dancing Script', cursive;
+}
 
 
