--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -1,4 +1,6 @@
-<!-- TODO: generate shopping list -->
+<!-- <em><b>TODO: generate shopping list move to shopping page
+</b></em> -->
+
 
 <div class="container-fluid">
   <div
@@ -18,13 +20,15 @@
         <div class="card-body">
           <div class="row align-items-center no-gutters">
             <div class="col me-2">
-              <div
+                            <!-- <em><b>                TODO sum of project budgets
+</b></em> -->
+ <div
                 class="text-uppercase text-primary fw-bold text-xs mb-1">
               <!-- top row cards -->
                 <span>Budget</span>
               </div>
               <div class="text-dark fw-bold h5 mb-0">
-                <!-- TODO sum of project budgets -->
+
                 <span>$500</span><!-- End: dash-budget -->
               </div>
             </div>
@@ -34,6 +38,10 @@
     </div>
     <div class="col-sm-4 col-md-6 col-lg-3 col-xl-3 mb-4">
       <div class="card shadow border-start-success py-2">
+
+        <!-- <em><b>                TODO add cost of items purchased
+        </b></em> -->
+
         <div class="card-body">
           <div class="row align-items-center no-gutters">
             <div class="col me-2">
@@ -44,7 +52,7 @@
               </div>
               <div class="text-dark fw-bold h5 mb-0">
                 <!-- Start: dash-ytd -->
-                <!-- TODO add cost of items purchased -->
+
                 <span>$1000</span
                 ><!-- End: dash-ytd -->
               </div>
@@ -70,7 +78,8 @@
                 <div class="col">
                   <div class="text-dark fw-bold h5 mb-0">
                     <!-- Start: UFO -->
-                    <!-- TODO count of projects !complete -->
+                    <!-- <em><b>                    TODO count of projects !complete
+</b></em> -->
                     <span>18</span
                     ><!-- End: UFO -->
                   </div>
@@ -135,8 +144,11 @@
         <div class="col-lg-12 mb-4">
           <div class="card text-white bg-primary shadow">
             <div class="card-body">
-              <!-- TODO assign colors not started blue(primary), In progress green(success), missing supplies red (danger)
-              TODO ngfor loop top 5 projects and ngif based on colors -->
+             <!-- <em><b>              TODO assign colors not started blue(primary), In progress gr een(success), missing supplies red (danger)
+
+</b></em><em><b>              TODO ngfor loop top 5 projects and ngif based on colors
+</b></em> -->
+
               <p class="m-0">Not started Blue</p>
               <p class="text-white-50 small m-0">Description</p>
             </div>
