--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -73,9 +73,9 @@
                   width="30"
                   height="30"
                   src="/assets/img/avatars/avatar1.jpeg?h=0ecc82101fb9a10ca459432faa8c0656"
-                />To Project Link
+                />{{projectName}}
               </td>
-              <td>5 words only go here</td>
+              <td>{{description}}</td>
               <td>First location</td>
               <td>first category</td>
               <td>one status</td>
