--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -1,17 +1,15 @@
-<!-- <em><b>TODO: generate shopping list move to shopping page
-</b></em> -->
+<!-- TODO: generate shopping list move to shopping page
+ -->
 
 
 <div class="container-fluid">
-  <div
-    class="d-sm-flex justify-content-between align-items-center mb-4"
-  >
+  <div class="d-sm-flex justify-content-between align-items-center mb-4">
     <h3 class=" mb-0">{{ title }} </h3>
-    <!-- TODO shopping list in to a shopping list page until can figure out how to display the list in plain text, csv, excel & what else? -->
-    <a class="btn btn-primary btn-sm d-none d-sm-inline-block"
-      role="button" routerLink="/shopping" routerLinkActive="active" ariaCurrentWhenActive="page"class="nav-link" >
-        <i class="fas fa-shopping-bag"></i>
-    <!-- to the shopping list page -->
+<!-- TODO shopping list in to a shopping list page until can figure out how to display the list in plain text, csv, excel & what else? -->
+    <a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" routerLink="/shopping"
+      routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-link">
+      <i class="fas fa-shopping-bag"></i>
+<!-- to the shopping list page -->
       &nbsp; Generate Shopping List</a>
   </div>
   <div class="row">
@@ -20,16 +18,15 @@
         <div class="card-body">
           <div class="row align-items-center no-gutters">
             <div class="col me-2">
-                            <!-- <em><b>                TODO sum of project budgets
-</b></em> -->
- <div
-                class="text-uppercase text-primary fw-bold text-xs mb-1">
-              <!-- top row cards -->
+<!--  TODO sum of project budgets -->
+              <div class="text-uppercase text-primary fw-bold text-xs mb-1">
+<!-- top row cards -->
                 <span>Budget</span>
               </div>
               <div class="text-dark fw-bold h5 mb-0">
 
-                <span>$500</span><!-- End: dash-budget -->
+                <span>$500</span>
+<!-- End: dash-budget -->
               </div>
             </div>
           </div>
@@ -39,22 +36,19 @@
     <div class="col-sm-4 col-md-6 col-lg-3 col-xl-3 mb-4">
       <div class="card shadow border-start-success py-2">
 
-        <!-- <em><b>                TODO add cost of items purchased
-        </b></em> -->
+<!-- TODO add cost of items purchased -->
 
         <div class="card-body">
           <div class="row align-items-center no-gutters">
             <div class="col me-2">
-              <div
-                class="text-uppercase text-success fw-bold text-xs mb-1"
-              >
+              <div class="text-uppercase text-success fw-bold text-xs mb-1">
                 <span>YTD Cost</span>
               </div>
               <div class="text-dark fw-bold h5 mb-0">
-                <!-- Start: dash-ytd -->
+<!-- Start: dash-ytd -->
 
-                <span>$1000</span
-                ><!-- End: dash-ytd -->
+                <span>$1000</span>
+<!-- End: dash-ytd -->
               </div>
             </div>
           </div>
@@ -66,9 +60,7 @@
         <div class="card-body">
           <div class="row align-items-center no-gutters">
             <div class="col me-2">
-              <div
-                class="text-uppercase text-info fw-bold text-xs mb-1"
-              >
+              <div class="text-uppercase text-info fw-bold text-xs mb-1">
                 <span>Projects in Progress</span>
               </div>
               <div class="row g-0 align-items-center">
@@ -77,11 +69,10 @@
                 </div>
                 <div class="col">
                   <div class="text-dark fw-bold h5 mb-0">
-                    <!-- Start: UFO -->
-                    <!-- <em><b>                    TODO count of projects !complete
-</b></em> -->
-                    <span>18</span
-                    ><!-- End: UFO -->
+<!-- Start: UFO -->
+<!--  TODO count of projects !complete -->
+                    <span>18</span>
+<!-- End: UFO -->
                   </div>
                 </div>
               </div>
@@ -90,43 +81,29 @@
         </div>
       </div>
     </div>
-    <!-- Shopping List Middle page start -->
+<!-- Shopping List Middle page start -->
     <div class="col-lg-12 mb-4">
       <div class="card shadow mb-4">
         <div class="card-header py-3">
-          <!-- TODO link to shopping list page from here -->
+<!-- TODO link to shopping list page from here -->
           <h6 class="text-primary fw-bold m-0">Shopping List</h6>
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <div class="row align-items-center no-gutters">
               <div class="col me-2">
-                <!-- Start: shopping-item -->
-                <!-- ngfor loop for each item on the list limit 5 -->
+<!-- Start: shopping-item -->
+<!-- ngfor loop for each item on the list limit 5 -->
                 <h6 class="mb-0"><strong> Item </strong></h6>
-                <span class="text-xs" style="margin: 5px"> Store</span
-                >
-                <span
-                  class="text-xs"
-                  style="margin: 5px"
-                  >Project</span>
-                <span
-                  class="text-xs"
-                  style="margin: 5px"
-                  >Cost</span
-                >
+                <span class="text-xs m5" > Store</span>
+                <span class="text-xs m5" >Project</span>
+                <span class="text-xs m5" >Cost</span>
               </div>
 <!-- checkbox -->
               <div class="col-auto">
                 <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="formCheck-1"
-                  /><label
-                    class="form-check-label"
-                    for="formCheck-1"
-                  ></label>
+                  <input class="form-check-input" type="checkbox" id="formCheck-1" /><label class="form-check-label"
+                    for="formCheck-1"></label>
                 </div>
               </div>
             </div>
@@ -144,10 +121,9 @@
         <div class="col-lg-12 mb-4">
           <div class="card text-white bg-primary shadow">
             <div class="card-body">
-             <!-- <em><b>              TODO assign colors not started blue(primary), In progress gr een(success), missing supplies red (danger)
+<!--  TODO assign colors not started blue(primary), In progress gr een(success), missing supplies red (danger)
 
-</b></em><em><b>              TODO ngfor loop top 5 projects and ngif based on colors
-</b></em> -->
+TODO ngfor loop top 5 projects and ngif based on colors -->
 
               <p class="m-0">Not started Blue</p>
               <p class="text-white-50 small m-0">Description</p>
