--- a/src/app/projectform/projectform.component.html
+++ b/src/app/projectform/projectform.component.html
@@ -111,11 +111,11 @@ TODO ensure that multiple tags can be saved
         <label class="col-form-label descl">Location</label>
       </div>
       <div class="col">
-        <input [(ngModel)]="location" class="form-control results" type="text" autocomplete="on" autofocus=""
+        <!-- <input [(ngModel)]="location" class="form-control results" type="text" autocomplete="on" autofocus="" -->
         name="location" placeholder="Describe the Container &amp; Location" />
         <button class="btn btn-primary m5" type="button" >
           <!-- TODO ngfor -->
-          {{location}}
+          <!-- {{location}} -->
         </button>
       </div>
 
